<resources>
    <string name="app_name">Data Center</string>
    <string name="title_activity_main">Data Center</string>
    <string name="action_settings">Settings</string>
    <string name="project_cund">Project CUND</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="megabits">MB</string>
    <string name="contact">Contact</string>
    <string name="haw">Hamburg University of Applied Science</string>
    <string name="haw_department">Information and Electro Technik</string>
    <string name="select_tarif">Select Your Tarif</string>
    <string name="settings_edit_user_link"><a>User Options</a></string>


    <string name="settings_send_to_server"><a>Send data to Server</a></string>
    <string name="settings_language"><a>Language:</a></string>
    <string name="settings_select_tariff"><a>Select Your Tarif:</a></string>


    <string name="title_database_main">User Data Settings</string>
    <string name="user_data_label">My data package: </string>
    <string name="user_sms_label">My SMS package: </string>
    <string name="user_voice_label">My Voice package: </string>
    <string name="user_price_label">My package cost: </string>
    <string name="user_data_change_link">change data package:</string>
    <string name="edit_user_settings_link">Edit User Package</string>
    <string name="settings_export_db_link"><a>Export Database</a></string>


    <string name="comparison_price_per_bit_label_1">Currently you pay</string>
    <string name="comparison_price_per_bit_label_2">per MB!</string>


    <string-array name="menu">
        <item>Usage</item>
        <item>Cost</item>
        <item>Settings</item>
        <item>Contact</item>
    </string-array>
    <string-array name="usage">
        <item>Daily</item>
        <item>Monthly</item>
    </string-array>
    <string-array name="language">
        <item>Default</item>
        <item>English</item>
        <item>Deutsch</item>
        <item>French</item>
        <item>Spanish</item>
        <item>Arabic</item>
    </string-array>


    <string name="welcome_title">Welcome!</string>
    <string name="welcome_subtitle">Please enter your Tarif options</string>
    <string name="welcome_info">For flat rate, please enter 0:</string>
    <string name="welcome_tarif_data">Enter Data Volume(MB)...</string>
    <string name="welcome_tarif_phone">Enter Phone rate(minute)...</string>
    <string name="welcome_tarif_sms">SMS rate(sms)...</string>
    <string name="welcome_tarif_price">Tarif Cost(euro)...</string>
    <string name="welcome_tarif_save">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">yearly</string>


</resources>
