<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/pop_up_menu">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:gravity="center"
        android:text="@string/welcome_title"
        android:background="@drawable/header"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textColor="@color/background_material_light"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/welcome_subtitle"
        android:textColor="@color/color_primary_dark"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/welcome_info"
        android:textColor="@color/color_primary_dark"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal" />


    <EditText
        android:id="@+id/welcome_tarif_data"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/welcome_tarif_data"
        android:inputType="number"/>

    <EditText
        android:id="@+id/welcome_tarif_phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/welcome_tarif_phone"
        android:inputType="number"/>

    <EditText
        android:id="@+id/welcome_tarif_sms"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/welcome_tarif_sms"
        android:inputType="number"/>

    <EditText
        android:id="@+id/welcome_tarif_price"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/welcome_tarif_price"
        android:inputType="number"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:text="@string/welcome_tarif_save"
        android:layout_marginBottom="10dp"
        android:id="@+id/config_confirm_button"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/color_red_dark"
        android:textColor="@color/background_material_light"
        android:layout_gravity="center_horizontal" />


</LinearLayout>